--- a/templates/editors/invoice.html
+++ b/templates/editors/invoice.html
@@ -313,7 +313,6 @@
     </contact>
 </div>
 <script>
-    const user_credentials = "{{credentials}}";
     const file_path = "{{&file_path}}";
     
     let file_data = {{&file_data}};
@@ -529,7 +528,7 @@
 
     async function save() {
         let res = await fetch(location.origin + "/update_file", {
-            headers: { credentials: user_credentials, path: file_path },
+            headers: { path: file_path },
             method: "POST",
             body: JSON.stringify(file_data)
         });
