--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -267,7 +267,6 @@
 </body>
 <script>
     const a_code = "A".charCodeAt(0);
-    const user_credentials = "{{credentials}}";
     const file_path = '{{&file_path}}';
     const ballot_box = "&#9744;";
     const ballot_box_checked = "&#9745;";
@@ -819,7 +818,7 @@
 
     async function save() {
         let res = await fetch(location.origin + "/update_file", {
-            headers: { credentials: user_credentials, path: file_path },
+            headers: { path: file_path },
             method: "POST",
             body: JSON.stringify(table_data),
         });
